2008-09-01	Jannis Pohlmann <jannis@xfce.org>

	* xfce4-mixer/xfce-mixer.c: Add g_return_val_if_fail() call to
	  xfce_mixer_bus_message() in order to return when an invalid mixer
	  object is passed to the function.

2008-09-01	Jannis Pohlmann <jannis@xfce.org>

	* xfce4-mixer/xfce-mixer.c: Connect to the GstBus after creating the
	  mxier widgets, not before. This shouldn't change anything but it
	  makes more sense to me.

2008-08-31	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixe/xfce-mixer-card-combo.c,
	  xfce4-mixer/xfce-mixer-window.c: Remember the selected sound card so
	  that it is selected again on next startup. Use
	  xfce_mixer_card_get_name() instead of
	  xfce_mixer_card_get_display_name() to determine the active card
	  index in XFceMixerCardCombo.

2008-08-10	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-volume-button.c: Use mute icon only if the
	  mixer track is actually muted.
	* panel-plugin/xfce-plugin-dialog.c: Fix compiler warning due to
	  missing gst/interfaces/mixer.h include.

2008-07-17	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/xfce-mixer-preferences.c, xfce4-mixer/main.c,
	  xfce4-mixer/xfce-mixer-window.c: Fix a few memory leaks.

2008-06-23	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/xfce-mixer-track-combo.c,
	  libxfce4mixer/xfce-mixer-card-combo.c,
	  libxfce4mixer/xfce-mixer-utilities.c,
	  panel-plugin/xfce-mixer-plugin.c,
	  panel-plugin/xfce-plugin-dialog.c: Fix compiler warnings due
	  to missing includes.

2008-06-23	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/xfce-mixer-card.c,
	  panel-plugin/xfce-mixer-plugin.c: Fix a compiler warning and
	  and an error.

2008-06-22	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/xfce-mixer-card.c: Improve
	  xfce_card_get_message_owner() by additionally comparing 
	  device names. I noticed that sometimes plugins are not
	  updated even though the GstBus should invoke the signal
	  handler. Hopefully, this fixes it.